docs/envoy/v1.13.0/_sources/api-v3/extensions/filters/network/kafka_broker/v3/kafka_broker.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/kafka_broker/v3/kafka_broker.proto:

Kafka Broker
============

.. _extension_envoy.filters.network.kafka_broker:


This extension may be referenced by the qualified name *envoy.filters.network.kafka_broker*

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

Kafka Broker :ref:`configuration overview <config_network_filters_kafka_broker>`.

.. _envoy_v3_api_msg_extensions.filters.network.kafka_broker.v3.KafkaBroker:

extensions.filters.network.kafka_broker.v3.KafkaBroker
------------------------------------------------------

`[extensions.filters.network.kafka_broker.v3.KafkaBroker proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/network/kafka_broker/v3/kafka_broker.proto#L16>`_


.. code-block:: json

  {
    "stat_prefix": "..."
  }

.. _envoy_v3_api_field_extensions.filters.network.kafka_broker.v3.KafkaBroker.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The prefix to use when emitting :ref:`statistics <config_network_filters_kafka_broker_stats>`.
  
  

