docs/envoy/v1.19.1/_sources/api-v3/extensions/filters/network/kafka_broker/v3/kafka_broker.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/kafka_broker/v3/kafka_broker.proto:

Kafka Broker
============


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/filter/network/kafka_broker/v2alpha1/kafka_broker.proto <v1.17.2:envoy_api_file_envoy/config/filter/network/kafka_broker/v2alpha1/kafka_broker.proto>`



.. _extension_envoy.filters.network.kafka_broker:

This extension may be referenced by the qualified name ``envoy.filters.network.kafka_broker``

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.network <extension_category_envoy.filters.network>`

Kafka Broker :ref:`configuration overview <config_network_filters_kafka_broker>`.

.. _envoy_v3_api_msg_extensions.filters.network.kafka_broker.v3.KafkaBroker:

extensions.filters.network.kafka_broker.v3.KafkaBroker
------------------------------------------------------

:repo:`[extensions.filters.network.kafka_broker.v3.KafkaBroker proto] <api/envoy/extensions/filters/network/kafka_broker/v3/kafka_broker.proto#L17>`


.. code-block:: json

  {
    "stat_prefix": "..."
  }

.. _envoy_v3_api_field_extensions.filters.network.kafka_broker.v3.KafkaBroker.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The prefix to use when emitting :ref:`statistics <config_network_filters_kafka_broker_stats>`.
  
  

